--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-architect
 title: Real Time Forecast of Hydrodynamics and Wave model
 description: Sbeastian Inlet, FL and vicinity
