--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
 theme: jekyll-theme-slate
 title: Real Time Forecast- Delft3d Hydrodynamic and Wave model
 description: Sbeastian Inlet, FL and vicinity
+author: Md Ahsan Habib
+email: mhabib2014@my.fit.edu
+ShowContactInfo: "True" # Personal Info (twitter,github,email) can be seen on aboutme-sidebar, those info only shown where ShowContactInfo == True
+default_column: "two" # blog style: two columns, if default_column != "two", you will see a one column blog.
+default_locale: "en" # blog sidebar language set, only include: English(en) and Chinese (cn)
