--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-slate
 title: Real Time Forecast- Delft3d Hydrodynamic and Wave model
-description: Sbeastian Inlet, FL and vicinity
+description: Sebastian Inlet, FL and vicinity
 author: Ahsan Habib
 ShowContactInfo: "True" # Personal Info (twitter,github,email) can be seen on aboutme-sidebar, those info only shown where ShowContactInfo == True
 default_column: "one" # blog style: two columns, if default_column != "two", you will see a one column blog.
