--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-slate
-title: Real Time Forecast- Delft3d Hydrodynamic and Wave model
+title: Real Time Forecast- Delft3d Hydrodynamic and Wave Model
 description: Sebastian Inlet, FL and vicinity
 author: Ahsan Habib
 ShowContactInfo: "True" # Personal Info (twitter,github,email) can be seen on aboutme-sidebar, those info only shown where ShowContactInfo == True
