--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-cayman
 title: Real Time Forecast- Delft3d Hydrodynamic and Wave Model
 description: Sebastian Inlet, FL and vicinity
 author: Md Ahsan Habib
-ShowContactInfo: "True" # Personal Info (twitter,github,email) can be seen on aboutme-sidebar, those info only shown where ShowContactInfo == True
-default_column: "one" # blog style: two columns, if default_column != "two", you will see a one column blog.
-default_locale: "en" # blog sidebar language set, only include: English(en) and Chinese (cn)
+
