--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
 title: Real Time Forecast- Delft3d Hydrodynamic and Wave Model
 description: Sebastian Inlet, FL and vicinity
-author: Md Ahsan Habib
+author: Ahsan Habib
 
